import { GithubCredentials } from "../../src/github";
import { MergeMethod } from "../../src/github/auto-queue";
import { NodeProject } from "../../src/javascript";
import { synthSnapshot, TestProject } from "../util";

describe("merge-queue", () => {
  test("auto queue workflow generated by default with merge queue enabled", async () => {
    const project = new TestProject({
      githubOptions: {
        mergeQueue: true,
      },
    });

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];

    expect(autoQueue).toBeDefined();
    expect(autoQueue).toContain("gh pr merge --auto --squash");
    expect(autoQueue).toMatchSnapshot();
  });

  test("auto queue workflow not generated with merge queue disabled", async () => {
    const project = new TestProject({});

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];

    expect(autoQueue).toBeUndefined();
  });

  test("auto queue workflow not generated if autoQueue is disabled", async () => {
    const project = new TestProject({
      githubOptions: {
        mergeQueue: true,
        mergeQueueOptions: {
          autoQueue: false,
        },
      },
    });

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];

    expect(autoQueue).toBeUndefined();
  });

  test("auto queue workflow generated with custom options", async () => {
    const project = new TestProject({
      githubOptions: {
        mergeQueue: true,
        mergeQueueOptions: {
          autoQueueOptions: {
            allowedUsernames: ["foo"],
            labels: ["abc"],
            mergeMethod: MergeMethod.MERGE,
            runsOn: ["gpu"],
            projenCredentials: GithubCredentials.fromPersonalAccessToken({
              secret: "shh",
            }),
          },
        },
      },
    });

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];

    expect(autoQueue).toContain(
      "if: (contains(github.event.pull_request.labels.*.name, 'abc')) && (github.event.pull_request.user.login == 'foo')",
    );
    expect(autoQueue).toContain("gh pr merge --auto --merge");
    expect(autoQueue).toContain("GH_TOKEN: ${{ secrets.shh }}");
    expect(autoQueue).toContain("runs-on: gpu");
    expect(autoQueue).toMatchSnapshot();
  });

  test("auto queue workflow uses environment from credentials", async () => {
    const project = new TestProject({
      githubOptions: {
        mergeQueue: true,
        mergeQueueOptions: {
          autoQueueOptions: {
            projenCredentials: GithubCredentials.fromPersonalAccessToken({
              secret: "shh",
              environment: "auto-queue-env",
            }),
          },
        },
      },
    });

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];

    expect(autoQueue).toContain("environment: auto-queue-env");
  });

  test("auto queue workflow generated with mergeQueue targetBranches", async () => {
    const project = new NodeProject({
      buildWorkflow: true,
      defaultReleaseBranch: "asd",
      name: "adas",
      githubOptions: {
        mergeQueue: true,
        mergeQueueOptions: {
          targetBranches: ["feature-1", "feature-2"],
        },
      },
    });

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];
    const build = snapshot[`.github/workflows/build.yml`];

    expect(autoQueue).toBeDefined();
    expect(build).toContain(`    branches:
      - feature-1
      - feature-2`);
  });

  test("auto queue workflow generated with autoQueue targetBranches", async () => {
    const project = new NodeProject({
      buildWorkflow: true,
      defaultReleaseBranch: "asd",
      name: "adas",
      githubOptions: {
        mergeQueue: true,
        mergeQueueOptions: {
          autoQueueOptions: {
            targetBranches: ["feature-1", "feature-2"],
          },
        },
      },
    });

    const snapshot = synthSnapshot(project);
    const autoQueue = snapshot[`.github/workflows/auto-queue.yml`];

    expect(autoQueue).toMatchSnapshot();
  });

  test.each([
    [MergeMethod.SQUASH, "squash"],
    [MergeMethod.MERGE, "merge"],
    [MergeMethod.REBASE, "rebase"],
  ])("mergeMethod %s produces a gh pr merge --%s step", (mergeMethod, flag) => {
    const project = new TestProject({
      githubOptions: {
        mergeQueue: true,
        mergeQueueOptions: {
          autoQueueOptions: { mergeMethod },
        },
      },
    });

    const autoQueue =
      synthSnapshot(project)[".github/workflows/auto-queue.yml"];

    expect(autoQueue).toContain(
      `run: gh pr merge --auto --${flag} "$PR_NUMBER" --repo "$GH_REPO"`,
    );
  });

  test.each([
    ["squash; echo pwned"],
    ["squash && rm -rf /"],
    ["$(echo squash)"],
    ["SQUASH"],
    ["fast-forward"],
    [""],
  ])("invalid mergeMethod %p throws", (mergeMethod) => {
    expect(
      () =>
        new TestProject({
          githubOptions: {
            mergeQueue: true,
            mergeQueueOptions: {
              autoQueueOptions: {
                // Simulates a caller from another jsii language or plain JS,
                // where the enum provides no runtime guarantee
                mergeMethod: mergeMethod as MergeMethod,
              },
            },
          },
        }),
    ).toThrow(/Invalid mergeMethod/);
  });

  test("invalid mergeMethod error lists all valid values", async () => {
    expect(
      () =>
        new TestProject({
          githubOptions: {
            mergeQueue: true,
            mergeQueueOptions: {
              autoQueueOptions: {
                mergeMethod: "squash; echo pwned" as MergeMethod,
              },
            },
          },
        }),
    ).toThrow(
      /Invalid mergeMethod "squash; echo pwned" in AutoQueueOptions\. Set 'mergeMethod' to one of: MergeMethod\.SQUASH \("squash"\), MergeMethod\.MERGE \("merge"\), MergeMethod\.REBASE \("rebase"\), or leave it unset to default to MergeMethod\.SQUASH\./,
    );
  });

  test("autoqueue branches must be subset of merge queue branches", async () => {
    expect(
      () =>
        new NodeProject({
          buildWorkflow: true,
          defaultReleaseBranch: "asd",
          name: "adas",
          githubOptions: {
            mergeQueue: true,
            mergeQueueOptions: {
              targetBranches: ["feature-1"],
              autoQueueOptions: {
                targetBranches: ["feature-1", "feature-2"],
              },
            },
          },
        }),
    ).toThrow(/must be a subset/);
  });
});
