// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`merge-queue auto queue workflow generated by default with merge queue enabled 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
      contents: write
    steps:
      - id: auto-queue-pr
        env:
          GH_TOKEN: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          GH_REPO: \${{ github.repository }}
          PR_NUMBER: \${{ github.event.number }}
        run: gh pr merge --auto --squash "$PR_NUMBER" --repo "$GH_REPO"
"
`;

exports[`merge-queue auto queue workflow generated with autoQueue targetBranches 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
      - edited
    branches:
      - feature-1
      - feature-2
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
      contents: write
    if: (github.event.action == 'opened' || (github.event.action == 'edited' && github.event.changes.base))
    steps:
      - id: auto-queue-pr
        env:
          GH_TOKEN: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          GH_REPO: \${{ github.repository }}
          PR_NUMBER: \${{ github.event.number }}
        run: gh pr merge --auto --squash "$PR_NUMBER" --repo "$GH_REPO"
"
`;

exports[`merge-queue auto queue workflow generated with custom options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: auto-queue
on:
  pull_request_target:
    types:
      - opened
      - reopened
      - ready_for_review
jobs:
  enableAutoQueue:
    name: "Set AutoQueue on PR #\${{ github.event.number }}"
    runs-on: gpu
    permissions:
      pull-requests: write
      contents: write
    if: (contains(github.event.pull_request.labels.*.name, 'abc')) && (github.event.pull_request.user.login == 'foo')
    steps:
      - id: auto-queue-pr
        env:
          GH_TOKEN: \${{ secrets.shh }}
          GH_REPO: \${{ github.repository }}
          PR_NUMBER: \${{ github.event.number }}
        run: gh pr merge --auto --merge "$PR_NUMBER" --repo "$GH_REPO"
"
`;
